--- a/Test02/Views/QTV/ThemNV.cshtml
+++ b/Test02/Views/QTV/ThemNV.cshtml
@@ -1,73 +1,176 @@
 ﻿@model Test02.Models.NhanVien
-
+@using Test02.Models
 @{
     ViewBag.Title = "ThemNV";
     Layout = "~/Views/QTV/Layout/LayoutQTV.cshtml";
+    QuanLyDLEntities2 database = new QuanLyDLEntities2();
 }
 
-<div class="tile">
-    <h3 class="tile-title">Thêm nhân viên</h3>
-    <div class="tile-body">
-        
-        <form class="row" action="#" method="post">
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group col-md-4">
-                <strong>Chức vụ: </strong>
-                <div class="col-md-10">
-                    <select class="form-control" id="MaChucVu" name="MaChucVu">
-                        <option selected>NVKD</option>
-                        <option>NVKT</option>
-                        <option>NVK</option>
-                        <option>NVGH</option>
-                    </select>
-                    @Html.ValidationMessageFor(model => model.MaChucVu, "", new { @class = "text-danger" })
+<div class="tile" style="margin:10px 20px;">
+    <h3 class="tile-title">THÊM TÀI KHOẢN NHÂN VIÊN </h3>
+    <div class="tile-body contenner" style="padding-top:10px">
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.MaNV)
+        <form class="row" method="post" enctype="multipart/form-data" action="">
+            <div class="imgstaff col-sm-5">
+                <div class="col-sm-12" style="text-align: center;">
+                    <label class="control-label">Chọn hình ảnh</label>
+                    @Html.TextBox("HinhAnh", "", new { type = "file" })
+                    <br />
+                    <img id="preview" class="rounded-circle " src="#" width="230" height="230" style="object-fit:cover; object-position:center; text-align: center;" />
+                    <br />
                 </div>
+               
             </div>
-            <div class="form-group col-md-4">
-                <strong>Tên nhân viên: </strong>
-                @Html.EditorFor(model => model.TenNV, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                <strong>Tên đăng nhập: </strong>
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                <strong>Mật khẩu: </strong>
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
+            <div class="info-staff col-sm-6">
+                <h5>THÔNG TIN CÁ NHÂN</h5>
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <strong>Tên nhân viên</strong>
+                        @Html.EditorFor(model => model.TenNV, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-12">
+                        <strong>Địa chỉ</strong>
+                        @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
+                    </div>
 
-            <div class="form-group col-md-4">
-                <strong>SDT: </strong>
-                @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group  col-md-4">
-                <strong>Địa chỉ: </strong>
-                @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                <strong>Email: </strong>
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-10">
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Thêm nhân viên" class="btn btn-default" />
+                    <div class="form-group col-md-6">
+                        <strong>Số điện thoại</strong>
+                        @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control", required = "required", @id = "Sdt", onchange = " SDTCheck()" } })
+                        @*@Html.ValidationMessageFor(model => model.Sdt, "", new { @class = "text-danger" })*@
+                        <span id="noti"></span>
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <strong>Email</strong>
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", required = "required", @id = "Email", onchange = "EmailCheck()" } })
+                        @*@Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })*@
+                        <span id="mess"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <strong>Chức vụ</strong>
+                        @Html.DropDownList("MaChucVu", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.MaChucVu, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-6">
+                        <strong>Username</strong>
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", required = "required", @id = "Username", onchange = "UserCheck()" } })
+                        @*<input class="form-control" type="text" id="Username" name="Username" required="required"/>*@
+                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        <span id="status"></span>
+
+                    </div>
+                    <div class="form-group col-md-6">
+                        <strong>Password</strong>
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", required = "required", @id = "Username", onchange = "UserCheck()" } })
+                        @*<input class="form-control" type="text" id="Username" name="Username" required="required"/>*@
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        
+
+                    </div>
+                    <div class="form-group col-md-6">
+                        <strong>Xác nhân password</strong>
+                        <input class="form-control" type="text" id="typepassword" name="typepassword" required="required"/>
+                       
+                        
+
                     </div>
                 </div>
             </div>
+            <div class="col-sm-5">
 
+                <p> @Html.ValidationSummary(true, "", new { @class = "text-danger" })</p>
+
+            </div>
+            <div class="col-sm-5">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <input type="submit" value="Save Account" class="btn btn-success btn-sm" />
+                    </div>
+                    <div class="col-sm-">
+                        <a href="" class="btn btn-warning btn-sm">Quay lại danh sách</a>
+                    </div>
+
+                </div>
+            </div>
         </form>
-
-    </div>
-    <div>
-        @Html.ActionLink("Quay lại danh sách nhân viên", "QLNhanVien")
     </div>
 
-   
+
+
+</div>
+
+
+@* script của upload *@
+
+<script>
+    HinhAnh.onchange = evt => {
+        const [file] = HinhAnh.files
+        if (file) {
+            preview.src = URL.createObjectURL(file);
+            $("#preview").removeClass("hidden");
+        }
+    }
+</script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
+<script type="text/javascript">
+     function UserCheck() {
+        $("#status").html("check ...");
+        $.post("@Url.Action("CheckUsernameAvailability", "Admin")",
+            {
+                userdata: $("#Username").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#status").html('<font color="Green">Available!</font>');
+                    $("#Username").css("border-color", "Green");
+                }
+                else {
+                    $("#status").html('<font color="Red">That name is taken. Try another !!</font>');
+                    $("#Username").css("border-color", "Red");
+                }
+            }
+        )
+    }
+
+     function EmailCheck() {
+        $("#mess").html("check ...");
+        $.post("@Url.Action("CheckEmailAvailability", "Admin")",
+            {
+                usermail: $("#Email").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#mess").html('<font color="Green">Available!</font>');
+                    $("#Email").css("border-color", "Green");
+                }
+                else {
+                    $("#mess").html('<font color="Red">That name is taken. Try another !!</font>');
+                    $("#Email").css("border-color", "Red");
+                }
+            }
+        )
+    }
+    function SDTCheck() {
+        $("#noti").html("check ...");
+        $.post("@Url.Action("CheckSDTAvailability", "Admin")",
+            {
+                userSDT: $("#Sdt").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#noti").html('<font color="Green">Available!</font>');
+                    $("#Sdt").css("border-color", "Green");
+                }
+                else {
+                    $("#noti").html('<font color="Red">That name is taken. Try another !!</font>');
+                    $("#Sdt").css("border-color", "Red");
+                }
+            }
+        )
+    }
+
+</script>
